# CyPhyRoboticFramework

./: CMakeLists.txt  CMakeSettings.json  README.md  remoteApiConnections.txt
config/: 980039-FRI-Driver.init  Armband_config.txt  Configuration.txt  Configuration_default.txt  FT17162.cal  FTSensor_config.txt  Geomagic_config.txt  HRing_config.txt  KUKA_config.txt  MultiLayerGelPhantom_config3layers-old.txt  MultiLayerGelPhantom_config3layers-oldv2.txt  MultiLayerGelPhantom_config50+70.txt  MultiLayerGelPhantom_config70.txt  MultiLayerGelPhantom_configAbdKidney.txt  MultiLayerGelPhantom_configAbdTopLeftLesion.txt  MultiLayerGelPhantom_config_bkp.txt  Needle_config.txt  TouchDIVER_config.txt  Trp.txt  sinTrajectory.txt
include/: pch_bkp.h  utils.hpp
include/aProxy/: ExtSystemProxy.hpp  HapticProxy.hpp  KeyboardProxy.hpp  RobotProxy.hpp  TeleopProxy.hpp  UserProxy.hpp  VREPProxy.hpp
include/aProxy/Armband/: ArmbandProxy.hpp  HapticDevice.h  serial.h
include/aProxy/FTSensor/: crlFTSensorWrapper.hpp
include/aProxy/Geomagic/: GeomagicHapticProxy.hpp  GeomagicProxy.hpp  GeomagicTeleopProxy.hpp
include/aProxy/HRing/: HRingProxy.hpp
include/aProxy/KukaRobot/: KukaProxy.hpp
include/aProxy/Weart/: WeartProxy.hpp
include/aProxy/Weart/WEART_SDK/: TouchEffect.h  WeArtCommon.h
include/bController/: AutonomousControlStrategy.hpp  AutonomousControlTask.hpp  BusinessLogicInterface.hpp  ControlContext.hpp  ControlStrategy.hpp  ControlTask.hpp  ForceFeedbackNeedleInsertionStrategy.hpp  Logger.hpp  ManualGuidanceControlTask.hpp  ManualGuidanceStrategy.hpp  NeedleTissueIntEstStrategy.hpp  OrientationLockControlTask.hpp  PositionLockControlTask.hpp  RegistrationStrategy.hpp  SensorReader.hpp  SystemManager.hpp  TaskContext.hpp  TaskStrategy.hpp  TeleopControlStrategy.hpp  TeleopControlTask.hpp  VirtualFixtureControlTask.hpp
include/cEntity/: AbdomenPhantom.hpp  Armband.hpp  Configuration.hpp  Dataset.hpp  EndEffector.hpp  FTSensor.hpp  GaussNewtonAlgorithm.hpp  Geomagic.hpp  HRing.hpp  HapticInterface.hpp  ICP.hpp  Instrument.hpp  KUKARobot.hpp  KinConstraint.hpp  LWR_Dynamic_Model_Lib.h  MultiLayerGelPhantom.hpp  Phantom.hpp  RLS.hpp  RegistrationData.hpp  RobotInterface.hpp  SinTrajectory.hpp  SystemState.hpp  Trajectory.hpp  WeartDevice.hpp
include/dDatabase/: DBWrapper.hpp
lib/: LWR_Dynamic_Model_Lib.lib  crlFTSensorWrapper.lib
src/: main.cpp  utils.cpp
src/aProxy/: KeyboardProxy.cpp  UserProxy.cpp  VREPProxy.cpp
src/aProxy/Armband/: ArmbandProxy.cpp  HapticDevice.cpp  serial.cpp
src/aProxy/Geomagic/: GeomagicHapticProxy.cpp  GeomagicProxy.cpp  GeomagicTeleopProxy.cpp
src/aProxy/HRing/: HRingProxy.cpp
src/aProxy/KukaRobot/: KukaProxy.cpp
src/aProxy/Weart/: TouchEffect.cpp  WeArtClient.cpp  WeartProxy.cpp  targetver.h
src/bController/: AutonomousControlStrategy.cpp  AutonomousControlTask.cpp  BusinessLogicInterface.cpp  ControlContext.cpp  ForceFeedbackNeedleInsertionStrategy.cpp  Logger.cpp  ManualGuidanceControlTask.cpp  ManualGuidanceStrategy.cpp  NeedleTissueIntEstStrategy.cpp  OrientationLockControlTask.cpp  PositionLockControlTask.cpp  RegistrationStrategy.cpp  SensorReader.cpp  SystemManager.cpp  TaskContext.cpp  TeleopControlStrategy.cpp  TeleopControlTask.cpp  VirtualFixtureControlTask.cpp
src/cEntity/: AbdomenPhantom.cpp  Armband.cpp  Configuration.cpp  Dataset.cpp  EndEffector.cpp  FTSensor.cpp  GaussNewtonAlgorithm.cpp  Geomagic.cpp  HRing.cpp  HapticInterface.cpp  ICP.cpp  Instrument.cpp  KUKARobot.cpp  MultiLayerGelPhantom.cpp  Phantom.cpp  RLS.cpp  RegistrationData.cpp  RobotInterface.cpp  SinTrajectory.cpp  Trajectory.cpp  WeartDevice.cpp
src/dDatabase/: DBWrapper.cpp
